# ecal_ros_bridge

./: CMakeLists.txt  README.md  package.xml
protobuf/: encoder.proto  msgName.proto
src/: bridge_node.cpp  ecal_to_ros.cpp  fake_encoder_pub.cpp  ros_to_ecal.cpp
